# noodler

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  plan.md  pyproject.toml
accounts/: admin.py  decorators.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_userprofile_membership.py  0003_alter_membership_role.py  0004_organization_uid.py  0005_populate_organization_uid.py  0006_alter_organization_uid.py  0007_organization_is_default.py  0008_alter_organization_is_default.py
accounts/tests/: test_views.py
datasets/: admin.py  decorators.py  forms.py  llm_utils.py  models.py  urls.py  utils.py  views.py
datasets/migrations/: 0001_initial.py  0002_annotation.py  0003_failuremode_and_annotation_categories.py  0004_alter_annotation_notes.py
datasets/tests/: test_models.py  test_views.py
ingest/: admin.py  models.py  projection.py  urls.py  validators.py  views.py
ingest/migrations/: 0001_initial.py  0002_rawspan_projected.py  0003_rawtrace_and_more.py  0004_rename_rawtrace_rawtraceold.py
noodler/: asgi.py  auth.py  celery.py  settings.py  urls.py  wsgi.py
projects/: admin.py  auth.py  context_processors.py  decorators.py  models.py  urls.py  utils.py  views.py
projects/migrations/: 0001_initial.py  0002_apikey_name.py  0003_alter_apikey_hashed_key.py  0004_alter_apikey_hashed_key.py  (+4 more)
telemetry/: admin.py  models.py
templates/: base.html  navbar.html
traces/: admin.py  models.py  projection.py  tasks.py  urls.py  utils.py  views.py
(+42 files in other folders)
