[project]
name = "noodler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.1",
    "django>=6.0",
    "djangorestframework>=3.16.1",
    "opentelemetry-proto>=1.39.1",
    "openai>=1.0.0",
    "protobuf>=6.33.2",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "ruff>=0.14.14",
]
